--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <h2 class="text-2xl md:text-3xl font-bold text-center">Contact Us</h2>
       <p class="mt-3 text-center text-gray-700">Reach out for partnerships, service inquiries, or a discovery call.</p>
       <div class="mt-8 grid md:grid-cols-2 gap-6 items-start">
-        <form id="contact-form" method="POST" action="https://formsubmit.co/contact@tmethodglobal.com" class="bg-white rounded-xl shadow p-6 grid gap-4">
+        <form id="contact-form" method="POST" action="https://formsubmit.co/bf703b28417ff192f914a3114c979d2c" class="bg-white rounded-xl shadow p-6 grid gap-4">
           <input type="hidden" name="_subject" value="New contact from TMethod Global Website" />
           <input type="hidden" name="_template" value="table" />
           <input type="text" name="_honey" class="hidden" tabindex="-1" autocomplete="off" />
@@ -225,6 +225,8 @@
           <input type="text" name="company" placeholder="Company (optional)" class="p-3 border rounded" />
           <textarea name="message" placeholder="Your Message" rows="5" class="p-3 border rounded" required></textarea>
           <button type="submit" class="bg-blue-900 text-white px-6 py-3 rounded hover:bg-blue-800">Send Message</button>
+          <input type="hidden" name="_next" value="https://tmethodglobal.com/#contact?sent=1">
+          <input type="hidden" name="_captcha" value="false">
          </form>
         <div class="bg-white rounded-xl shadow p-6">
           <h3 class="text-lg font-semibold">Head Office</h3>
