--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TMethod Global Private Limited</title>
-  <meta name="description" content="TMethod Global Pvt. Ltd. — Aviation partner in India: inflight digital experience, international aviation consulting, HR consulting, and property management. Based at IGI Airport, New Delhi." />
+  <meta name="description" content="TMethod Global Pvt. Ltd. — Aviation partner in India: International aviation consulting, HR consulting, and office space management. Based at IGI Airport, New Delhi." />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
   <section id="home" class="bg-gradient-to-b from-blue-50 to-white">
     <div class="container mx-auto px-6 py-16 text-center">
       <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Empowering Global Aviation from India</h1>
-      <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">Your trusted partner for inflight digital experience, international aviation consulting, HR consulting, and property management — strategically based at <strong>IGI Airport, New Delhi</strong>.</p>
+      <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">Your trusted partner for International Aviation Consulting, HR Consulting, and Office Space Management — strategically based at <strong>IGI Airport, New Delhi</strong>.</p>
       <div class="mt-6 space-x-3">
         <a href="#services" class="inline-block bg-blue-900 text-white px-6 py-3 rounded-md hover:bg-blue-800">Explore Services</a>
         <a href="#contact" class="inline-block border border-blue-900 text-blue-900 px-6 py-3 rounded-md hover:bg-blue-50">Contact Us</a>
@@ -55,7 +55,7 @@
       <div class="grid md:grid-cols-2 gap-10 items-start">
         <div>
           <h2 class="text-2xl md:text-3xl font-bold">About TMethod Global</h2>
-          <p class="mt-4 leading-relaxed">TMethod Global Private Limited helps international aviation companies set up and scale their operations in India. With a base at <strong>Indira Gandhi International Airport (IGI)</strong>, we combine local execution with global standards across digital inflight services, aviation consulting, HR, and property management.</p>
+          <p class="mt-4 leading-relaxed">TMethod Global Private Limited helps international aviation companies set up and scale their operations in India. With a base at <strong>Indira Gandhi International Airport (IGI)</strong>, we combine local execution with global standards across Aviation Consulting, HR Consulting, and Office Space Management.</p>
           <ul class="mt-6 space-y-2 list-disc list-inside text-gray-700">
             <li>Location advantage: IGI Airport, New Delhi</li>
             <li>Compliance-first operations & transparent processes</li>
@@ -105,6 +105,7 @@
               <h4 class="font-medium">Regulatory Liaison</h4>
               <ul class="mt-2 space-y-1 list-disc list-inside text-sm">
                 <li>Liaison with DGCA, BCAS, and Ministry of Civil Aviation</li>
+                <li>Support for Schedule, Non Schedule Operations (NSO), and overflying permissions</li>
                 <li>Coordination with Airports Authority of India (AAI)</li>
                 <li>Advising on compliance and risk management strategies</li>
               </ul>
@@ -151,17 +152,6 @@
           </div>
         </article>
 
-        <!-- Inflight Digital Experience -->
-        <article id="inflight" class="bg-white rounded-xl shadow p-6">
-          <h3 class="text-xl font-semibold">Inflight Digital Experience</h3>
-          <p class="mt-2">Deliver modern onboard experiences that engage passengers.</p>
-          <ul class="mt-4 space-y-2 list-disc list-inside">
-            <li><strong>Wireless IFE & Digital Engagement:</strong> Enable passengers to stream content and access services on their own devices.</li>
-            <li><strong>Bluebox Partnership (India Operations):</strong> Local support for <em>Bluebox Aviation Systems Limited (UK)</em> including staffing and coordination.</li>
-            <li><strong>Dedicated Staff & Serviced Office (Delhi):</strong> On-ground team and office facilities for program delivery, support, and stakeholder liaison.</li>
-          </ul>
-        </article>
-
         <!-- HR Consultant -->
         <article id="hr" class="bg-white rounded-xl shadow p-6">
           <h3 class="text-xl font-semibold">HR Consultant</h3>
@@ -182,9 +172,9 @@
           </ul>
         </article>
 
-        <!-- Property Management -->
-        <article id="property" class="bg-white rounded-xl shadow p-6">
-          <h3 class="text-xl font-semibold">Property Management</h3>
+        <!-- Office Space Management -->
+        <article id="space" class="bg-white rounded-xl shadow p-6">
+          <h3 class="text-xl font-semibold">Office Space Management</h3>
           <p class="mt-2">Find, secure, and operate the right workspace for aviation-focused teams in and around IGI Airport.</p>
           <ul class="mt-4 space-y-2 list-disc list-inside">
             <li>Identify properties as per client requirements and budget</li>
@@ -206,7 +196,27 @@
   <section id="clients" class="py-16">
     <div class="container mx-auto px-6 max-w-5xl text-center">
       <h2 class="text-2xl md:text-3xl font-bold">Clients & Partners</h2>
-      <p class="mt-3">We support <strong>Bluebox Aviation Systems Limited (UK)</strong> with India operations including dedicated staffing, serviced office space in Delhi, and ongoing coordination.</p>
+      <h3 class="text-lg font-semibold">Bluebox Aviation Systems Limited (UK) - India Operations Support</h3>
+      <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+          <dl class="mt-4 grid sm:grid-cols-2 gap-x-6 gap-y-3 text-sm">
+            <div>
+              <dt class="font-bold">Local Service & Staffing Partner</dt>
+              <dd class="font-family: 'Times New Roman', Times, serif">We are the dedicated India service and staffing partner for Bluebox Aviation Systems Ltd. (UK) — delivering seamless local coordination, operational support, and resource management to ensure the success of Bluebox programs in the region.</dd>
+            </div>
+            <div>
+              <dt class="font-bold">Dedicated On-Ground Team</dt>
+              <dd class="font-family: 'Times New Roman', Times, serif">Based in our serviced office in Delhi, our experienced team provides daily operational oversight, technical assistance, and administrative coordination. This ensures timely response, consistent service quality, and smooth implementation of all Bluebox initiatives in India.</dd>
+            </div>
+            <div>
+              <dt class="font-bold">Comprehensive Local Support</dt>
+              <dd class="font-family: 'Times New Roman', Times, serif">Our role extends across the full operational lifecycle — from project setup and communication management to on-site service delivery and customer support. We act as the local bridge between Bluebox UK, airline clients, and regional stakeholders.</dd>
+            </div>
+            <div>
+              <dt class="font-bold">Reliable Partnership</dt>
+              <dd class="font-family: 'Times New Roman', Times, serif">With a focus on transparency, agility, and professionalism, we support Bluebox’s global standards through local execution. Our goal is to deliver efficiency, accountability, and excellence in every engagement.</dd>
+            </div>
+          </dl>
+        </div>  
     </div>
   </section>
 
