--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <h4 class="font-medium">Regulatory Liaison</h4>
               <ul class="mt-2 space-y-1 list-disc list-inside text-sm">
                 <li>Liaison with DGCA, BCAS, and Ministry of Civil Aviation</li>
-                <li>Support for Schedule, Non Schedule Operations (NSO), and overflying permissions</li>
+                <li>Support for Schedule, Non Schedule Operations (NSOP), and overflying permissions</li>
                 <li>Coordination with Airports Authority of India (AAI)</li>
                 <li>Advising on compliance and risk management strategies</li>
               </ul>
