--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section id="home" class="bg-gradient-to-b from-blue-50 to-white">
     <div class="container mx-auto px-6 py-16 text-center">
       <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Empowering Global Aviation from India</h1>
-      <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">Your trusted partner for International Aviation Consulting, HR Consulting, and Office Space Management — strategically based at <strong>IGI Airport, New Delhi</strong>.</p>
+      <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">Your trusted partner for International Aviation Consulting, HR Consulting, and Office Space Management - strategically based at <strong>IGI Airport, New Delhi</strong>.</p>
       <div class="mt-6 space-x-3">
         <a href="#services" class="inline-block bg-blue-900 text-white px-6 py-3 rounded-md hover:bg-blue-800">Explore Services</a>
         <a href="#contact" class="inline-block border border-blue-900 text-blue-900 px-6 py-3 rounded-md hover:bg-blue-50">Contact Us</a>
